llm-servers/llama.cpp/standalone/02-llama-cpp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-cpp-deployment
  labels:
    app: llama-cpp
    app.kubernetes.io/part-of: llama-cpp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-cpp
  template:
    metadata:
      labels:
        app: llama-cpp
    spec:
      volumes:
        # - name: llama-cpp-pvc
        #   emptyDir:
        #     medium: Memory
        - name: llama-cpp-pvc
          persistentVolumeClaim:
            claimName: llama-cpp-pvc
      containers:
        - name: llama-cpp
          image: quay.io/milstein/llama-runtime-ubi:latest  # You can build and use your own image using provided Containerfile or use the one from GitHub Container Registry -> ghcr.io/ggml-org/llama.cpp:server
          imagePullPolicy: IfNotPresent
          args: ["-m", "/models/mistral-7b-instruct-v0.3.Q4_K_M.gguf", "--prio", "3", "-c", "4096", "-b", "32", "-t", "48", "-n", "-1"]
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          resources:
            limits:
              cpu: '5'
              memory: 12Gi
              nvidia.com/gpu: '1'
            requests:
              cpu: '4'
              memory: 10Gi
              nvidia.com/gpu: '1'
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: llama-cpp-pvc
              mountPath: /models
      restartPolicy: Always
      tolerations:
        - key: nvidia.com/gpu.product
          operator: Equal
          value: Tesla-V100-PCIE-32GB
          effect: NoSchedule
      nodeSelector:
        nvidia.com/gpu.product: Tesla-V100-PCIE-32GB
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
